--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
 <br><br><br>
 
-<center> кто ты </center>
+<center> <h1>кто ты</h1> </center>
