--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
+<html>
+<head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
+</head>
+<body>
 
 <br><br><br>
 
 <center> <h1>кто ты</h1> </center>
+</body>
+</html>
