--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
-<body>
+<body style="
+    background: black;
+">
 
 <br><br><br>
 
