--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
-<body style="
-    background: black;
-">
+<body style="background: black;">
 
 <br><br><br>
 
