--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 
   <br><br><br>
 
-  <center> <h1>кто ты</h1> </center>
+  <center> <h1 style="color:white;">кто ты</h1> </center>
  </body>
 </html>
