--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
  <head>
  <meta name="viewport" content="width=device-width, initial-scale=1">
+ <link href="https://rosagro-tech.github.io/fonts/eth2/stylesheet.css" rel="stylesheet">
  </head>
   <body style="background: black;">
 
