--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <meta name="viewport" content="width=device-width, initial-scale=1">
  <link href="https://rosagro-tech.github.io/fonts/eth2/stylesheet.css" rel="stylesheet">
  </head>
-  <body style="background:black;font-family:'CocoBikeR';">
+  <body style="background:#464646;font-family:'CocoBikeR';">
 
   <br><br><br>
 
