--- a/coord.html
+++ b/coord.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Система Координат</title>
+    <title>Система Координат: Бессознательное и Подсознание</title>
     <style>
         body {
             margin: 0;
-            font-family: monospace;
-            font-weight: 900;
+            font-family: 'Arial', sans-serif;
             background-color: #121212;
             color: #f1f1f1;
             display: flex;
@@ -88,10 +87,10 @@
     <div class="chart-container">
         <div class="angle-labels">
             <!-- Углы -->
-            <div class="angle-label" style="top: 5%; left: 50%;">Гармония и Адаптация</div>
-            <div class="angle-label" style="top: 50%; right: 5%;">Статичность и Ограниченность</div>
-            <div class="angle-label" style="bottom: 5%; left: 50%;">Естественный Порядок и Баланс</div>
-            <div class="angle-label" style="top: 50%; left: 5%;">Консерватизм и Самодостаточность</div>
+            <div class="angle-label" style="top: 5%; left: 50%;">Ясность и Понимание</div>
+            <div class="angle-label" style="top: 50%; right: 5%;">Неосознанные Порывы</div>
+            <div class="angle-label" style="bottom: 5%; left: 50%;">Иррациональные Силы</div>
+            <div class="angle-label" style="top: 50%; left: 5%;">Глубинные Архетипы</div>
         </div>
 
         <!-- Оси -->
@@ -103,16 +102,16 @@
         <!-- Легенда -->
         <div class="legend">
             <div class="legend-item">
-                <i style="color: #ff6347;">&#9733;</i><span>ИИ</span>
+                <i style="color: #ff6347;">&#9733;</i><span>Осознанность и Просветление</span>
             </div>
             <div class="legend-item">
-                <i style="color: #1e90ff;">&#9733;</i><span>Физика</span>
+                <i style="color: #1e90ff;">&#9733;</i><span>Неосознанные Желания</span>
             </div>
             <div class="legend-item">
-                <i style="color: #32cd32;">&#9733;</i><span>Социум</span>
+                <i style="color: #ff4500;">&#9733;</i><span>Иррациональные Мотивы</span>
             </div>
             <div class="legend-item">
-                <i style="color: #ffa500;">&#9733;</i><span>Биология</span>
+                <i style="color: #32cd32;">&#9733;</i><span>Глубинные Архетипы</span>
             </div>
         </div>
     </div>
