--- a/squares.html
+++ b/squares.html
@@ -57,12 +57,10 @@
     <title>4 Ровных Квадрата с Описаниями</title>
     <style>
         body, html {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            width: 100%;
-            display: flex;
-            flex-wrap: wrap;
+            font-family: monospace;
+            font-weight: 900;margin: 0;padding: 0;
+            height: 100%;width: 100%;
+            display: flex;flex-wrap: wrap;
             box-sizing: border-box;
         }
 
