--- a/squares.html
+++ b/squares.html
@@ -99,11 +99,14 @@
         }
 
         .description-corner {
-            position: absolute;
-            font-size: 14px;
-            font-weight: bold;
-            color: #fff;
-            text-align: center;
+           position: absolute;
+           font-size: 20px;
+           font-weight: bold;
+           color: #fff;
+           text-align: center;
+           padding: 15px;
+           border-radius: 7px;
+           background-color: #ffffff14;
         }
 
         /* Позиции для углов */
