--- a/squares.html
+++ b/squares.html
@@ -92,10 +92,12 @@
         }
 
         .description-center {
-            font-size: 20px;
-            font-weight: bold;
-            color: #fff;
-            text-align: center;
+           font-size:40px;padding:40px;
+           font-weight: bold;
+           text-align: center;
+           border-radius: 7px;
+           background-color: #ffffff14;
+           color: #fff;
         }
 
         .description-corner {
