--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
       <ul id="listOutput"></ul>
     </section>
   </main>
-  <script type="module" src="js/main.js"></script>
+  <script type="module" src="Js/main.js"></script>
 </body>
 </html>
