--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header class="header">
-    <h1>ДНК Шифратор & Распределённое Хранилище (Helia)</h1>
+    <h1>Распределённое Хранилище Информации в Виде ДНК</h1>
   </header>
 
   <main class="container">
