--- a/test_a.html
+++ b/test_a.html
@@ -6,6 +6,7 @@
   <title>ДНК-Шифратор & Распределённое Хранилище</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet"/>
   <style>
+    ::-webkit-scrollbar{width:0;}
     :root {
       --bg:#151b23; --fg:#fff;
       --card-bg:#1f2937;
