--- a/test_a.html
+++ b/test_a.html
@@ -37,7 +37,7 @@
   </style>
 </head>
 <body>
-  <header>ДНК-Шифратор & Распределённое Хранилище (Helia)</header>
+      <h1>Распределённое Хранилище Для Информации в Виде ДНК</h1>
   <div class="container">
     <!-- 1. DNA-шифратор -->
     <section class="card">
